--- a/data/index.html
+++ b/data/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel='shortcut icon' type='image/x-icon' href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte + TS</title>
-    <script type="module" crossorigin src="/assets/index.e90d30cd.js"></script>
-    <link rel="stylesheet" href="/assets/index.3635012e.css">
+    <title>Casa Kombi Amora</title>
+    <script type="module" crossorigin src="/assets/index.2b2118b2.js"></script>
+    <link rel="stylesheet" href="/assets/index.0c66a2ae.css">
   </head>
   <body>
     <div id="app"></div>
